refactoring(codecleanup, coverage, quality) try to improve codequality and coverage
* remove unused imports
* migrate to java 11 syntax
* accessibility checks